# minicalc

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  math_interpreter.cpp  math_interpreter.hpp  math_interpreter_exceptions.hpp  math_tokens.hpp  math_tokens_helpers.hpp
